# wnfs-ios-bindings

./: .gitignore  Cargo.toml  Makefile  Package.resolved  Package.swift  README.md  WnfsBindings.podspec  cocoapods-bundle.zip.sha256
.github/workflows/: build.yml  ensure-podspec-version.yml  rust.yml  swift.yml
Sources/WnfsSwift/: WnfsSwift.swift
Tests/WnfsSwiftTests/: WnfsSwiftTests.swift
WNFSDemo/WNFSDemo/: ContentView.swift  WNFSDemoApp.swift
WNFSDemo/WNFSDemo.xcodeproj/: project.pbxproj
WNFSDemo/WNFSDemo.xcodeproj/xcshareddata/xcschemes/: WNFSDemo.xcscheme
WNFSDemo/WNFSDemoTests/: WNFSDemoTests.swift
WNFSDemo/WNFSDemoUITests/: WNFSDemoUITests.swift  WNFSDemoUITestsLaunchTests.swift
dep/wnfsutils/src/: private_forest.rs
include/: module.modulemap  wnfs.h  wnfsbindings.h
src/: blockstore.rs  blockstore_interface.rs  build.rs  c_types.rs  lib.rs  store.rs  tests.rs
wnfs-swift-pkg/: Package.swift
wnfs-swift-pkg/Sources/WnfsSwift/: WnfsSwift.swift
wnfs-swift-pkg/Tests/WnfsSwiftTests/: Test.swift  WnfsSwiftTests.swift
