[package]
name = "wnfs-ios"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wnfs"
crate-type = [ "staticlib" ]

[dependencies]
libc = "0.2.139"
wnfs = {path = "dep/wnfs" }
wnfsutils = {path = "dep/wnfsutils" }
anyhow = "1.0.66"
serde = "1.0.149"
serde_json = "1.0.89"
chrono = "0.4.22"
crc32fast = "1.3.2"
env_logger = "0.9.0"
log = "0.4.14"
image = "0.24.2"
url = { version = "2.2.2", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
libipld = { version = "0.15", features = ["dag-cbor", "derive", "serde-codec"] }
kv = "0.24.0"
sha256 = "1.1.1"
once_cell = "1.17.0"
# swift-rs = "0.3.0"

# [build-dependencies]
# swift-rs = { version = "0.3.0", features = ["build"] }