[package]
name = "wnfs-swift-bindings"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wnfsbindings"
crate-type = [ "staticlib" ]

[dependencies]
libc = "0.2.139"
wnfs = {git= "https://github.com/wnfs-wg/rs-wnfs.git", tag="wnfs-v0.1.22"}
wnfsutils = { git = "https://github.com/functionland/wnfs-utils.git", tag = "v1.0.4" }

libipld = { version = "0.16", features = ["dag-cbor", "derive", "serde-codec"] }
anyhow = "1.0.66"
serde = "1.0.149"
serde_json = "1.0.89"
chrono = "0.4.22"
crc32fast = "1.3.2"
env_logger = "0.9.0"
log = "0.4.14"
image = "0.24.2"
url = { version = "2.2.2", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
kv = "0.24.0"
sha256 = "1.1.1"
once_cell = "1.17.0"
hex = "0.4.3"